# span_ext

./: CMakeLists.txt  LICENSE  README.md
include/span_ext/: span_ext.h
test/: CMakeLists.txt  test.cxx
